# Inverse-Reinforcement-Learning

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_installation.py
configs/: default.yaml  test.yaml
demo/: app.py
scripts/: quick_start.py  run_demo.py
src/: __init__.py
src/algorithms/: __init__.py  max_entropy_irl.py
src/envs/: __init__.py  data_collection.py
src/train/: train_irl.py
src/utils/: __init__.py  seeding.py
tests/: test_irl.py
